samples/_failures_safe/1761561246_9ba57e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8b9283bf.c: In function ‘main’:
./samples/SAFE/__tmp_8b9283bf.c:149:44: error: missing terminating " character
  149 |     char* operation_names[] = {"Dijkstra", "BFS
      |                                            ^~~~
./samples/SAFE/__tmp_8b9283bf.c:149:5: error: expected expression at end of input
  149 |     char* operation_names[] = {"Dijkstra", "BFS
      |     ^~~~
./samples/SAFE/__tmp_8b9283bf.c:149:5: error: expected declaration or statement at end of input
